--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Limits/LimitsSelectionView.xib
@@ -13,6 +13,7 @@
                 <outlet property="confirm" destination="f8l-6k-9TM" id="eC5-8o-iXK"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="8mV-ep-caN"/>
                 <outlet property="descriptionLabel" destination="3DK-MG-ptu" id="3OD-k7-fIt"/>
+                <outlet property="info" destination="sgf-9D-0Ke" id="yVL-6o-HBf"/>
                 <outlet property="textField" destination="Shp-fJ-r8n" id="OTW-QP-w4J"/>
                 <outlet property="title" destination="1Km-sT-iLU" id="hyJ-ou-glc"/>
             </connections>
@@ -80,6 +81,9 @@
                         <constraint firstAttribute="bottom" secondItem="3DK-MG-ptu" secondAttribute="bottom" constant="8" id="yye-yg-zPc"/>
                     </constraints>
                 </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="info" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="sgf-9D-0Ke">
+                    <rect key="frame" x="366.5" y="30" width="33.5" height="29"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,11 +91,15 @@
                 <constraint firstItem="IYG-sb-Kve" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="5xc-JN-YWw"/>
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="7hc-IV-Tgs"/>
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="A5j-Dr-FVY"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="sgf-9D-0Ke" secondAttribute="trailing" id="DeH-TI-cBL"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Wls-GQ-otr"/>
+                <constraint firstItem="sgf-9D-0Ke" firstAttribute="width" secondItem="sgf-9D-0Ke" secondAttribute="height" multiplier="1:1" id="Z9C-31-xr8"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="Zb1-X8-F14"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="top" secondItem="IYG-sb-Kve" secondAttribute="bottom" id="hEr-JN-wJ4"/>
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="hqP-LR-7g2"/>
+                <constraint firstItem="sgf-9D-0Ke" firstAttribute="height" secondItem="f8l-6k-9TM" secondAttribute="height" multiplier="0.5" id="lOz-Zm-wUW"/>
                 <constraint firstItem="IYG-sb-Kve" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="muS-xV-86D"/>
+                <constraint firstItem="sgf-9D-0Ke" firstAttribute="centerY" secondItem="1Km-sT-iLU" secondAttribute="centerY" id="qFj-Xo-l9k"/>
                 <constraint firstItem="1Km-sT-iLU" firstAttribute="height" secondItem="r6e-vP-YoV" secondAttribute="height" id="tta-Wv-6hp"/>
                 <constraint firstItem="IYG-sb-Kve" firstAttribute="top" secondItem="1Km-sT-iLU" secondAttribute="bottom" id="v7G-HF-wQr"/>
                 <constraint firstItem="r6e-vP-YoV" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="wHM-TV-DWa"/>
@@ -102,5 +110,6 @@
     </objects>
     <resources>
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="info" catalog="system" width="93" height="128"/>
     </resources>
 </document>
