multipart data upload

--- a/ThinkWhat/Modules/Controllers/App/Survey/Existing/Poll/PollView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Existing/Poll/PollView.xib
@@ -20,21 +20,31 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" bouncesZoom="NO" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="fRc-zb-mjb">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQ0-1H-8Vm">
+                    <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" id="eas-Up-JWH"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="fRc-zb-mjb">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fRc-zb-mjb" secondAttribute="bottom" id="2DL-Ec-Wlo"/>
-                <constraint firstItem="fRc-zb-mjb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="9GB-5I-qh9"/>
+                <constraint firstItem="DQ0-1H-8Vm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="2N4-W0-uCa"/>
+                <constraint firstItem="DQ0-1H-8Vm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="2VG-E0-1vH"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DQ0-1H-8Vm" secondAttribute="trailing" id="fci-Di-AKz"/>
+                <constraint firstItem="fRc-zb-mjb" firstAttribute="top" secondItem="DQ0-1H-8Vm" secondAttribute="bottom" id="kGg-9d-eHG"/>
                 <constraint firstItem="fRc-zb-mjb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="vkO-EN-WPI"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="fRc-zb-mjb" secondAttribute="trailing" id="xQa-Uv-B0O"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="83"/>
+            <point key="canvasLocation" x="137.68115942028987" y="82.366071428571431"/>
         </view>
     </objects>
     <resources>
