--- a/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Image selection/ImageSelectionPopup.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Create/Poll/Popup content/Image selection/ImageSelectionPopup.xib
@@ -19,6 +19,7 @@
                 <outlet property="imageView" destination="8JG-4l-DoW" id="vLF-HK-Gw3"/>
                 <outlet property="previewStackView" destination="oIw-ek-q6b" id="zxZ-fO-jov"/>
                 <outlet property="textView" destination="gX8-Jw-0tR" id="Vfo-fG-twP"/>
+                <outlet property="textViewBg" destination="fYv-Zi-Ku5" id="Pjh-bB-2mM"/>
                 <outlet property="title" destination="CCd-8D-Vfh" id="1dn-xs-a3h"/>
             </connections>
         </placeholder>
@@ -71,7 +72,7 @@
                     <rect key="frame" x="0.0" y="90" width="400" height="420"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oIw-ek-q6b">
-                            <rect key="frame" x="0.0" y="21" width="400" height="378"/>
+                            <rect key="frame" x="0.0" y="8" width="400" height="404"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8JG-4l-DoW">
                                     <rect key="frame" x="0.0" y="0.0" width="400" height="225"/>
@@ -80,19 +81,31 @@
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9p-zy-nrS" customClass="InsetLabel" customModule="ThinkWhat" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="225" width="400" height="56.5"/>
+                                    <rect key="frame" x="0.0" y="225" width="400" height="60.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gX8-Jw-0tR">
-                                    <rect key="frame" x="0.0" y="281.5" width="400" height="96.5"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                    <color key="textColor" systemColor="labelColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                </textView>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fYv-Zi-Ku5">
+                                    <rect key="frame" x="0.0" y="285.5" width="400" height="118.5"/>
+                                    <subviews>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gX8-Jw-0tR">
+                                            <rect key="frame" x="8" y="8" width="384" height="102.5"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <color key="textColor" systemColor="labelColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="gX8-Jw-0tR" firstAttribute="top" secondItem="fYv-Zi-Ku5" secondAttribute="top" constant="8" id="H5S-Mn-0GY"/>
+                                        <constraint firstAttribute="bottom" secondItem="gX8-Jw-0tR" secondAttribute="bottom" constant="8" id="Ifm-J7-vAK"/>
+                                        <constraint firstItem="gX8-Jw-0tR" firstAttribute="leading" secondItem="fYv-Zi-Ku5" secondAttribute="leading" constant="8" id="XZF-uM-GrG"/>
+                                        <constraint firstAttribute="trailing" secondItem="gX8-Jw-0tR" secondAttribute="trailing" constant="8" id="eYd-9G-1mE"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <constraints>
                                 <constraint firstItem="b9p-zy-nrS" firstAttribute="height" secondItem="oIw-ek-q6b" secondAttribute="height" multiplier="0.15" id="DFh-YG-Sg3"/>
@@ -101,10 +114,11 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="oIw-ek-q6b" firstAttribute="top" secondItem="3PL-l1-OpK" secondAttribute="top" constant="8" id="M7o-52-FLZ"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="width" secondItem="3PL-l1-OpK" secondAttribute="width" id="PP8-wb-U7C"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="centerX" secondItem="3PL-l1-OpK" secondAttribute="centerX" id="fv3-f9-yr9"/>
-                        <constraint firstItem="oIw-ek-q6b" firstAttribute="height" secondItem="3PL-l1-OpK" secondAttribute="height" multiplier="0.9" id="gMU-so-U2H"/>
                         <constraint firstItem="oIw-ek-q6b" firstAttribute="centerY" secondItem="3PL-l1-OpK" secondAttribute="centerY" id="kzq-b0-bHg"/>
+                        <constraint firstAttribute="bottom" secondItem="oIw-ek-q6b" secondAttribute="bottom" constant="8" id="y1R-8K-uvg"/>
                     </constraints>
                 </view>
             </subviews>
@@ -124,7 +138,7 @@
                 <constraint firstItem="hvd-0A-DbY" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="yRP-Tj-Eol"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="139" y="84"/>
+            <point key="canvasLocation" x="137.68115942028987" y="83.705357142857139"/>
         </view>
     </objects>
     <resources>
@@ -132,9 +146,6 @@
         <image name="trash.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
