--- a/ThinkWhat/Modules/UI/Popup & Banner/Content/Image paste/ImagePasteView.xib
+++ b/ThinkWhat/Modules/UI/Popup & Banner/Content/Image paste/ImagePasteView.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,14 +21,20 @@
             <rect key="frame" x="0.0" y="0.0" width="400" height="150"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CzN-AL-Ei2">
-                    <rect key="frame" x="150" y="0.0" width="250" height="150"/>
+                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="GWd-wH-Yhr">
+                    <rect key="frame" x="20" y="19" width="360" height="112.5"/>
                     <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u15-f0-QNL">
+                            <rect key="frame" x="0.0" y="0.0" width="112.5" height="112.5"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="u15-f0-QNL" secondAttribute="height" multiplier="1:1" id="0Mh-yM-4d1"/>
+                            </constraints>
+                        </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="OEJ-kZ-JZb">
-                            <rect key="frame" x="91.5" y="42" width="67" height="66"/>
+                            <rect key="frame" x="120.5" y="0.0" width="239.5" height="112.5"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uqe-fL-qb1">
-                                    <rect key="frame" x="0.0" y="0.0" width="67" height="31"/>
+                                    <rect key="frame" x="86.5" y="0.0" width="67" height="54"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     <connections>
@@ -36,7 +42,7 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00P-TT-mUl">
-                                    <rect key="frame" x="0.0" y="35" width="67" height="31"/>
+                                    <rect key="frame" x="86.5" y="58" width="67" height="54.5"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                     <connections>
@@ -46,29 +52,14 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="OEJ-kZ-JZb" firstAttribute="centerX" secondItem="CzN-AL-Ei2" secondAttribute="centerX" id="78X-eq-vld"/>
-                        <constraint firstItem="OEJ-kZ-JZb" firstAttribute="centerY" secondItem="CzN-AL-Ei2" secondAttribute="centerY" id="rGw-JU-pub"/>
-                    </constraints>
-                </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="u15-f0-QNL">
-                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="u15-f0-QNL" secondAttribute="height" multiplier="1:1" id="0Mh-yM-4d1"/>
-                    </constraints>
-                </imageView>
+                </stackView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="u15-f0-QNL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="BPV-SY-Jfp"/>
-                <constraint firstItem="CzN-AL-Ei2" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="FrH-w7-oYQ"/>
-                <constraint firstItem="CzN-AL-Ei2" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="IXg-Jr-3UU"/>
-                <constraint firstItem="CzN-AL-Ei2" firstAttribute="leading" secondItem="u15-f0-QNL" secondAttribute="trailing" id="KRO-4n-VZR"/>
-                <constraint firstItem="CzN-AL-Ei2" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="QKc-MI-Dgc"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="u15-f0-QNL" secondAttribute="bottom" id="TQX-bd-Pxt"/>
-                <constraint firstItem="u15-f0-QNL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kyX-dM-cdf"/>
+                <constraint firstItem="GWd-wH-Yhr" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.9" id="BuR-pe-OLy"/>
+                <constraint firstItem="GWd-wH-Yhr" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="fDU-7T-K7a"/>
+                <constraint firstItem="GWd-wH-Yhr" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="tXj-gI-X4w"/>
+                <constraint firstItem="GWd-wH-Yhr" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.75" id="yjn-pt-Cvg"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="84.375"/>
