--- a/ThinkWhat/Modules/Controllers/App/Survey/Existing/Poll/PollView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/Existing/Poll/PollView.xib
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PollView" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
+                <outlet property="container" destination="e2e-D9-7gT" id="dQt-KI-TRD"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="O4Y-ou-w9P"/>
-                <outlet property="tableView" destination="fRc-zb-mjb" id="Vgp-fl-HA8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -27,22 +27,21 @@
                         <constraint firstAttribute="height" id="eas-Up-JWH"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="fRc-zb-mjb">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e2e-D9-7gT">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="fRc-zb-mjb" secondAttribute="bottom" id="2DL-Ec-Wlo"/>
                 <constraint firstItem="DQ0-1H-8Vm" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="2N4-W0-uCa"/>
                 <constraint firstItem="DQ0-1H-8Vm" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="2VG-E0-1vH"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="e2e-D9-7gT" secondAttribute="bottom" id="5Js-f1-sjg"/>
+                <constraint firstItem="e2e-D9-7gT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="6M3-uu-VvA"/>
+                <constraint firstItem="e2e-D9-7gT" firstAttribute="top" secondItem="DQ0-1H-8Vm" secondAttribute="bottom" id="DJ8-tn-FYv"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="e2e-D9-7gT" secondAttribute="trailing" id="NUn-4U-fBG"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="DQ0-1H-8Vm" secondAttribute="trailing" id="fci-Di-AKz"/>
-                <constraint firstItem="fRc-zb-mjb" firstAttribute="top" secondItem="DQ0-1H-8Vm" secondAttribute="bottom" id="kGg-9d-eHG"/>
-                <constraint firstItem="fRc-zb-mjb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="vkO-EN-WPI"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="fRc-zb-mjb" secondAttribute="trailing" id="xQa-Uv-B0O"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="82.366071428571431"/>
         </view>
