--- a/ThinkWhat/Modules/UI/Static/Avatar/Avatar.xib
+++ b/ThinkWhat/Modules/UI/Static/Avatar/Avatar.xib
@@ -13,8 +13,8 @@
             <connections>
                 <outlet property="border" destination="gQv-EW-IX4" id="2BB-Eo-u4S"/>
                 <outlet property="borderBg" destination="js7-17-TTd" id="ISf-HI-Jr9"/>
+                <outlet property="container" destination="eHQ-L1-xes" id="aDV-jv-g6t"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="zSk-59-MPF"/>
-                <outlet property="imageView" destination="4eG-q8-nmk" id="yjb-iy-Y9W"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,19 +29,20 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gQv-EW-IX4">
                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4eG-q8-nmk">
-                            <rect key="frame" x="5" y="5" width="90" height="90"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eHQ-L1-xes">
+                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <accessibility key="accessibilityConfiguration" identifier="container"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="4eG-q8-nmk" secondAttribute="height" multiplier="1:1" id="EnS-gO-7GB"/>
+                                <constraint firstAttribute="width" secondItem="eHQ-L1-xes" secondAttribute="height" multiplier="1:1" id="LFP-8U-JeE"/>
                             </constraints>
-                        </imageView>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="4eG-q8-nmk" firstAttribute="width" secondItem="gQv-EW-IX4" secondAttribute="width" multiplier="0.9" identifier="ratio" id="7rW-dP-Q4z"/>
-                        <constraint firstItem="4eG-q8-nmk" firstAttribute="centerY" secondItem="gQv-EW-IX4" secondAttribute="centerY" id="MCM-fE-K4J"/>
-                        <constraint firstItem="4eG-q8-nmk" firstAttribute="centerX" secondItem="gQv-EW-IX4" secondAttribute="centerX" id="Ncp-IW-KMg"/>
+                        <constraint firstItem="eHQ-L1-xes" firstAttribute="centerX" secondItem="gQv-EW-IX4" secondAttribute="centerX" id="FhG-3P-JAC"/>
+                        <constraint firstItem="eHQ-L1-xes" firstAttribute="centerY" secondItem="gQv-EW-IX4" secondAttribute="centerY" id="qXL-96-B9L"/>
+                        <constraint firstItem="eHQ-L1-xes" firstAttribute="height" secondItem="gQv-EW-IX4" secondAttribute="height" identifier="ratio" id="zfe-Cf-tv7"/>
                     </constraints>
                 </view>
             </subviews>
