--- a/ThinkWhat/Modules/Controllers/App/List/ListView.xib
+++ b/ThinkWhat/Modules/Controllers/App/List/ListView.xib
@@ -11,9 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ListView" customModule="ThinkWhat" customModuleProvider="target">
             <connections>
-                <outlet property="card" destination="cha-N3-aee" id="n7b-bG-S4E"/>
-                <outlet property="cardShadow" destination="IME-4v-gI4" id="4PE-8T-Hi8"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="fzN-9a-KHM"/>
+                <outlet property="shadowView" destination="IME-4v-gI4" id="4PE-8T-Hi8"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,42 +21,32 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s5C-Mj-HBA">
-                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IME-4v-gI4">
-                            <rect key="frame" x="10" y="10" width="394" height="798"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
-                            </userDefinedRuntimeAttributes>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cha-N3-aee">
-                            <rect key="frame" x="10" y="10" width="394" height="798"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        </view>
-                    </subviews>
+                    <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="cha-N3-aee" secondAttribute="trailing" constant="10" id="Avf-bB-5pM"/>
-                        <constraint firstItem="IME-4v-gI4" firstAttribute="centerY" secondItem="cha-N3-aee" secondAttribute="centerY" id="Xqe-KL-c1Y"/>
-                        <constraint firstItem="IME-4v-gI4" firstAttribute="height" secondItem="cha-N3-aee" secondAttribute="height" id="c5X-F0-IOy"/>
-                        <constraint firstAttribute="bottom" secondItem="cha-N3-aee" secondAttribute="bottom" constant="10" id="krk-Gf-BTA"/>
-                        <constraint firstItem="IME-4v-gI4" firstAttribute="width" secondItem="cha-N3-aee" secondAttribute="width" id="uBr-IJ-gZn"/>
-                        <constraint firstItem="cha-N3-aee" firstAttribute="top" secondItem="s5C-Mj-HBA" secondAttribute="top" constant="10" id="vhA-yC-HMO"/>
-                        <constraint firstItem="IME-4v-gI4" firstAttribute="centerX" secondItem="cha-N3-aee" secondAttribute="centerX" id="yfP-EV-hBt"/>
-                        <constraint firstItem="cha-N3-aee" firstAttribute="leading" secondItem="s5C-Mj-HBA" secondAttribute="leading" constant="10" id="znF-sq-742"/>
+                        <constraint firstAttribute="height" id="APS-54-1Fe"/>
                     </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IME-4v-gI4">
+                    <rect key="frame" x="10" y="54" width="394" height="798"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="s5C-Mj-HBA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ASv-xm-8st"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="s5C-Mj-HBA" secondAttribute="bottom" id="IHp-Nd-OJo"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="IME-4v-gI4" secondAttribute="trailing" constant="10" id="3Bk-AJ-8wR"/>
+                <constraint firstItem="IME-4v-gI4" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="Kgr-4i-9fb"/>
                 <constraint firstItem="s5C-Mj-HBA" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="O9N-7j-2ry"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="IME-4v-gI4" secondAttribute="bottom" constant="10" id="gY6-ab-PUw"/>
+                <constraint firstItem="IME-4v-gI4" firstAttribute="top" secondItem="s5C-Mj-HBA" secondAttribute="bottom" constant="10" id="m48-J2-eF3"/>
+                <constraint firstItem="s5C-Mj-HBA" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="sbI-Bl-1g6"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="s5C-Mj-HBA" secondAttribute="trailing" id="t3r-p3-Yqr"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="67"/>
+            <point key="canvasLocation" x="-58" y="141"/>
         </view>
     </objects>
     <resources>
