--- a/ThinkWhat/Modules/Controllers/App/Survey/List/Collection/SurveyCellContentView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/List/Collection/SurveyCellContentView.xib
@@ -81,7 +81,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8pF-U5-G1t" customClass="Avatar" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="244" y="30" width="40" height="40"/>
+                            <rect key="frame" x="248" y="30" width="40" height="40"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="8pF-U5-G1t" secondAttribute="height" multiplier="1:1" id="5W4-Pg-TFr"/>
@@ -101,7 +101,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z87-Jc-9lp">
-                            <rect key="frame" x="35" y="20" width="201" height="60"/>
+                            <rect key="frame" x="35" y="20" width="205" height="60"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -110,7 +110,7 @@
                             <rect key="frame" x="105.5" y="16" width="15" height="15"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n48-2N-oRL" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="232" y="18" width="64" height="64"/>
+                            <rect key="frame" x="236" y="18" width="64" height="64"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="n48-2N-oRL" secondAttribute="height" multiplier="1:1" id="1yO-5B-vpJ"/>
@@ -120,7 +120,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dE-Z4-hmW" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="232" y="18" width="64" height="64"/>
+                            <rect key="frame" x="236" y="18" width="64" height="64"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <nil key="textColor"/>
@@ -141,6 +141,7 @@
                         <constraint firstItem="dot-28-co8" firstAttribute="height" secondItem="mGN-PY-CXB" secondAttribute="height" id="7PD-Us-x26"/>
                         <constraint firstItem="uPn-dI-0kl" firstAttribute="leading" secondItem="dO2-xq-BxN" secondAttribute="leading" constant="16" id="8dG-h9-ON9"/>
                         <constraint firstItem="AvD-2u-YZV" firstAttribute="leading" secondItem="iJk-FY-YSO" secondAttribute="trailing" constant="6" id="9ha-nd-X0A"/>
+                        <constraint firstAttribute="trailing" secondItem="8dE-Z4-hmW" secondAttribute="trailing" id="9yi-JU-UGh"/>
                         <constraint firstItem="5H6-Rz-zES" firstAttribute="leading" secondItem="rNY-MQ-PmU" secondAttribute="trailing" constant="8" id="AEf-GH-O9Q"/>
                         <constraint firstItem="z87-Jc-9lp" firstAttribute="height" secondItem="dO2-xq-BxN" secondAttribute="height" multiplier="0.6" id="Aj9-gf-0cS"/>
                         <constraint firstItem="iJk-FY-YSO" firstAttribute="centerY" secondItem="5H6-Rz-zES" secondAttribute="centerY" id="BMC-Zn-hNY"/>
@@ -159,7 +160,6 @@
                         <constraint firstItem="n48-2N-oRL" firstAttribute="centerY" secondItem="8pF-U5-G1t" secondAttribute="centerY" id="Tei-2O-Cd5"/>
                         <constraint firstItem="rNY-MQ-PmU" firstAttribute="top" secondItem="dO2-xq-BxN" secondAttribute="top" constant="16" id="U5m-sw-Lzf"/>
                         <constraint firstItem="8dE-Z4-hmW" firstAttribute="centerX" secondItem="8pF-U5-G1t" secondAttribute="centerX" id="UGT-8k-yjI"/>
-                        <constraint firstAttribute="trailing" secondItem="8pF-U5-G1t" secondAttribute="trailing" constant="16" id="UmO-rD-mys"/>
                         <constraint firstItem="8pF-U5-G1t" firstAttribute="height" secondItem="dO2-xq-BxN" secondAttribute="height" multiplier="0.4" id="X5w-lY-DXd"/>
                         <constraint firstItem="8pF-U5-G1t" firstAttribute="leading" secondItem="z87-Jc-9lp" secondAttribute="trailing" priority="999" constant="8" id="aIV-ph-0Zo"/>
                         <constraint firstItem="dot-28-co8" firstAttribute="centerY" secondItem="bmT-6M-XRW" secondAttribute="centerY" id="aJ0-XA-c30"/>
